# cheat-engine

./: .gitignore
Cheat Engine/: ArcDriver.pas  DissectCodeThread.pas  LuaInternet.pas  MainUnit2.pas  accessedmemory.pas  cesupport.pas  cetranslator.pas  cheatengine.lpi  cheatengine.lpr  first.pas  frmautoinjectunit.pas  frmmicrotransactionsunit.pas  memscan.pas  olddebugger.pas  pointervaluelist.pas  symbollisthandler.pas
Cheat Engine/Tutorial/: cetranslator.pas
Cheat Engine/betterControls/: bettercontrols.pas
Cheat Engine/dbk32/: DBK32functions.pas
Cheat Engine/launcher/: cheatengine.lpi  cheatengine.lpr
CheatEngine-editer/: FIX_GUIDE.md  PowerShellHistory.txt  ce_deploy.py  cheat_engine_driver_swap.md  debug_build.bat
CheatEngine-editer/driver/: BUILD_GUIDE.md  Cargo.toml  build.rs  kmem_driver.sys
CheatEngine-editer/driver/.cargo/: config.toml
CheatEngine-editer/driver/src/: lib.rs
CheatEngine-editer/output/: MyRoot_5C7B.sys  MyRoot_7261.sys  MyRoot_72D3.sys  MyRoot_74BF.sys  MyRoot_756E.sys  run.bat
CheatEngine-editer/patches/Cheat Engine/: ArcDriver.pas  LuaHandler.pas  MainUnit2.pas  cheatengine.lpr  first.pas  luavirtualstringtree.pas  symbollisthandler.pas
CheatEngine-editer/patches/Cheat Engine/dbk32/: DBK32functions.pas
CheatEngine-editer/rust_core/: Cargo.toml  PowerShellHistory.txt  query
CheatEngine-editer/rust_core/src/: lib.rs
